# hearts-solver

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  replay-pimc-check.html  replay-solver.html  replay-tiny.html  replay.html
.claude/: memory-decisions.md  memory-preferences.md  memory-profile.md  memory-sessions.md
crates/hearts-cli/: Cargo.toml
crates/hearts-cli/src/: main.rs
crates/hearts-core/: Cargo.toml
crates/hearts-core/benches/: solver_bench.rs
crates/hearts-core/src/: card_set.rs  deck.rs  game.rs  game_state.rs  lib.rs  replay.rs  replay_template.html  stats.rs  trick.rs  types.rs
crates/hearts-core/src/belief/: mod.rs  observation.rs  sampler.rs
crates/hearts-core/src/bots/: mod.rs  random_bot.rs  rule_bot.rs  solver_bot.rs
crates/hearts-core/src/search/: alpha_mu.rs  mod.rs  pimc.rs
crates/hearts-core/src/solver/: alpha_beta.rs  brute_force.rs  eval.rs  maxn.rs  mod.rs  paranoid.rs  transposition.rs
docs/: plan.md  regression_plan.md  step-by-step.md
regression/: README.md  ml.ipynb  train_eval.py  train_tree.py
regression/models/: eval_nn.pt
